--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,8 @@ ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negoti
 # koin
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
+koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
+
 # coil
 coil = { module = "io.coil-kt.coil3:coil", version.ref = "coil" }
 # test
